plugins {
    id 'com.github.johnrengelman.shadow' version '7.1.2'
    id 'java'
    id 'idea'
    id 'jacoco'
}

group = 'com.lts.caloriecount'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
    mavenCentral()
}

compileJava {
    options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.misc=ALL-UNNAMED']
    options.compilerArgs += ['--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED']
    options.compilerArgs += ['--add-exports', 'java.desktop/java.awt.peer=ALL-UNNAMED']
    options.compilerArgs += ['--add-exports', 'java.xml/com.sun.org.apache.xml.internal.serialize=ALL-UNNAMED']

}


dependencies {
    implementation fileTree(dir: 'lib', include: ['*.jar'])
    implementation fileTree(dir: 'test-lib', include: ['*.jar'])

    implementation 'com.sun.activation:javax.activation:1.2.0'


    testImplementation fileTree(dir: '../lib', include: ['*.jar'])
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    testCompileOnly 'junit:junit:4.12'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.8.1'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    ignoreFailures = true
}

jacocoTestReport {
    reports {
        html.required = true
        xml.required = false
        csv.required = true
    }
}
